===============================================================================

--- v0.6.? ----------------------------------------------------- ??/??/20?? ---

ADD: center connect dialog on top of main frame/window
ADD: columns in sessions dialog (upon start) are customizable
FIX: wrong display of title text, when tab title changes
FIX: unchecked confirmTabClose in properties (JSE6 only)
FIX: bug id:3179868 (Text and fields are not displayed)
FIX: bug id:3161636 (System Name not in window title bar anymore)
FIX: bug id:3160345 (Default value of column separator looks strange)
FIX: bug id:3158902 (settings folder in user's home directory is not created)
CHG: removed old images (JSE6 only)

--- v0.6.2 ----------------------------------------------------- 08/12/2010 ---

ADD: Improved tab bar with SSL enabled icon (JSE6 only)
ADD: Nimbus theme as default (JSE6 only)
ADD: Multiple icons in different sizes (JSE6 only)
ADD: Saving last connected session at user's preference store, preselecting
     last selected session on startup
ADD: Sessions table, sorting by session name ignoring case
ADD: Sessions table, sorting by host/ip is possible
ADD: Screen export: concat a '.txt' to the exported file name, if no extension
     was given
ADD: Screen export: set the file filter '*.txt' as default
ADD: New icon set (sf-patchid: 2110159)
ADD: About dialog/tab
ADD: Saving last selected session in user's system preferences
ADD: Send keyboard type, codepage and charset to configure display device
     (correct CCSID)
ADD: feature request "Confirm on tab close" (feature request id: 2714023,
     3085825), contributor: Craig Duncan (duncan3dc)
FIX: IndexOutOfBoundsException, when trying to reorder a single tab
FIX: NullPointerExceptions when trying to transmit no file to/from AS400
FIX: ClassCastException when using MDI mode (sf-patchid: 2555604)
FIX: SSL connecting problem since Java5 (sf-patchid: 2555362)
FIX: NPE when using console logger